OCT-261 Create server for fetching values of ETH & GLM & OCT-163 Enable option "Use ETH as main value display" & OCT-164 Enable option "Choose a display currency" & OCT-323 Show double values in both crypto & fiat

--- a/client/src/components/core/DoubleValue/DoubleValue.module.scss
+++ b/client/src/components/core/DoubleValue/DoubleValue.module.scss
@@ -3,19 +3,23 @@
   font-weight: $font-weight-semibold;
 }
 
-.mainValue {
+.primary {
+  font-size: $font-size-24;
+  text-align: left;
 
   &.variant-- {
     &standard {
       font-size: $font-size-24;
     }
+
     &small {
       font-size: $font-size-18;
     }
   }
 }
 
-.alternativeValue {
+.secondary {
+  text-align: left;
   font-size: $font-size-12;
   color: $color-octant-green2;
 }
