--- a/client/src/styles/utils/_typography.scss
+++ b/client/src/styles/utils/_typography.scss
@@ -12,3 +12,4 @@ $font-size-07: 0.7rem;
 $font-weight-superbold: 700;
 $font-weight-bold: 600;
 $font-weight-semibold: 500;
+$font-weight-medium: 400;
