OCT-323 Show double values in both crypto & fiat -- another color of CoinGecko info

--- a/client/src/layouts/MainLayout/MainLayout.module.scss
+++ b/client/src/layouts/MainLayout/MainLayout.module.scss
@@ -173,7 +173,7 @@ $headerNavigationBorderRadius: $border-radius-32;
 .coinGecko {
   position: fixed;
   bottom: 0.7rem;
-  color: $color-octant-dark;
+  color: $color-octant-grey3;
   left: 50%;
   transform: translate(-50%, 0);
   font-size: $font-size-08;
