--- a/client/src/components/core/DoubleValue/DoubleValue.module.scss
+++ b/client/src/components/core/DoubleValue/DoubleValue.module.scss
@@ -1,11 +1,19 @@
 .root {
   color: $color-octant-dark;
   font-weight: $font-weight-semibold;
+
+  &.textAlignment--{
+    &left {
+      text-align: left;
+    }
+    &right {
+      text-align: right;
+    }
+  }
 }
 
 .primary {
   font-size: $font-size-24;
-  text-align: left;
 
   &.variant-- {
     &standard {
@@ -19,7 +27,6 @@
 }
 
 .secondary {
-  text-align: left;
   font-size: $font-size-12;
   color: $color-octant-green2;
 }
