--- a/client/src/components/core/Button/Button.module.scss
+++ b/client/src/components/core/Button/Button.module.scss
@@ -153,6 +153,16 @@
     font-size: 1.6rem;
     text-decoration: underline;
   }
+
+  &link4 {
+    position: relative;
+    height: auto;
+    display: inline;
+    color: $color-octant-green2;
+    padding: 0;
+    font-size: 1.2rem;
+    text-decoration: underline;
+  }
 }
 
 .icon {
