--- a/client/src/components/dedicated/DonorsList/DonorsList.module.scss
+++ b/client/src/components/dedicated/DonorsList/DonorsList.module.scss
@@ -3,8 +3,7 @@
   flex-direction: column;
   background: $color-octant-grey4;
   margin-top: 4rem;
-  padding-top: 4rem;
-  padding-bottom: $layoutBodyMarginBottom;
+  padding: 4rem 0;
   flex: 1;
   align-self: stretch;
 
