hotfix: faulty Identicon component replaced

--- a/client/src/components/dedicated/DonorsList/DonorsList.module.scss
+++ b/client/src/components/dedicated/DonorsList/DonorsList.module.scss
@@ -7,6 +7,10 @@
   flex: 1;
   align-self: stretch;
 
+  .loader {
+    align-self: center;
+  }
+
   .header {
     display: flex;
     align-items: center;
