OCT-166 Remove option "Show Metrics introductions"

--- a/client/src/views/ProposalsView/ProposalsView.module.scss
+++ b/client/src/views/ProposalsView/ProposalsView.module.scss
@@ -3,6 +3,7 @@ $verticalDistanceBetweenElements: $layoutMarginHorizontal;
 .list {
   display: flex;
   flex-wrap: wrap;
+  width: 100%;
 
   @media #{$desktop-up} {
     margin: 0 (-(calc($verticalDistanceBetweenElements / 2)));
