--- a/client/src/components/core/Modal/Modal.module.scss
+++ b/client/src/components/core/Modal/Modal.module.scss
@@ -1,24 +1,26 @@
 .root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: fixed;
   z-index: $z-index-5;
   bottom: -100%;
   left: 0;
   width: 100%;
+  height: max-content;
   max-height: 90%;
-  overflow: auto;
-  background: $color-white;
-  padding: 2.4rem 2.4rem 4rem;
   text-align: left;
-  box-shadow: $box-shadow-1;
   transition: bottom 0.25s linear;
-  border-radius: $border-radius-20 $border-radius-20 0 0;
+  background: $color-octant-grey4;
 
   &.isOpen {
     bottom: 0;
   }
 
-  &.isClickable {
-    cursor: pointer;
+  .image {
+    display: flex;
+    align-items: flex-end;
+    margin-top: 5.6rem;
   }
 
   .header {
@@ -26,12 +28,15 @@
     font-size: $font-size-20;
     font-weight: $font-weight-bold;
     margin: 0 0 4rem 0;
+    width: 100%;
   }
 
   .body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    background: $color-white;
+    padding: 5.6rem 2.4rem 5.6rem;
   }
 }
 
@@ -49,18 +54,41 @@
   top: 1.6rem;
   right: 1.6rem;
   z-index: $z-index-4;
+
+  &.isFullScreen {
+    position: fixed;
+  }
 }
 
 
 @media #{$desktop-up} {
   .root {
     width: 47.2rem;
-    transform: translate(-50%, 50%);
-    left: 50%;
+    top: 100%;
+    box-shadow: $box-shadow-1;
     border-radius: $border-radius-20;
 
     &.isOpen {
-      bottom: 50%;
+      top:0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+    }
+  }
+
+  .buttonClose {
+    &.isFullScreen {
+      position: absolute;
+    }
+  }
+
+  .body {
+    &.hasImage {
+      border-radius: 0 0 $border-radius-20 $border-radius-20;
+    }
+    &:not(.hasImage) {
+      border-radius: $border-radius-20;
     }
   }
 }
