--- a/client/src/views/OnboardingView/OnboardingView.module.scss
+++ b/client/src/views/OnboardingView/OnboardingView.module.scss
@@ -1,27 +1,14 @@
+@import "src/components/core/ProgressStepperSlim/ProgressStepperSlim.module";
+
 .text {
   color: $color-octant-grey6;
   font-weight: $font-weight-semibold;
   line-height: 2.4rem;
 }
 
-.imageWrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  background: $color-octant-grey4;
-  margin-top: 4rem;
-}
-
-.image {
-  margin-top: 4rem;
-}
-
 .progressBar {
   align-self: stretch;
-  margin: 3.6rem 5.5rem;
-  width: auto;
+  margin: 4.8rem 5.2rem (-$stepPadding);
 }
 
 .bold {
