--- a/client/src/styles/utils/_mixins.scss
+++ b/client/src/styles/utils/_mixins.scss
@@ -19,3 +19,7 @@
   flex-shrink: 0;
   flex-basis: calc(#{calc(100/$elementsCount)}% - #{calc($gutterSize*($elementsCount - 1)/$elementsCount)});
 }
+
+@mixin boldText() {
+  font-weight: $font-weight-superbold;
+}
