--- a/client/src/components/core/Modal/Modal.module.scss
+++ b/client/src/components/core/Modal/Modal.module.scss
@@ -7,7 +7,8 @@
   bottom: -100%;
   left: 0;
   width: 100%;
-  height: max-content;
+  max-height: 100%;
+  overflow: auto;
   text-align: left;
   transition: bottom 0.25s linear;
   background: $color-octant-grey4;
@@ -37,6 +38,7 @@
     width: 100%;
     background: $color-white;
     padding: 4rem 2.4rem;
+    overflow: auto;
   }
 }
 
@@ -64,16 +66,13 @@
 @media #{$desktop-up} {
   .root {
     width: 47.2rem;
-    top: 100%;
+    transform: translate(-50%, 50%);
+    left: 50%;
     box-shadow: $box-shadow-1;
     border-radius: $border-radius-20;
 
     &.isOpen {
-      top:0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      margin: auto;
+      bottom: 50%;
     }
   }
 
