--- a/client/src/components/core/Modal/Modal.module.scss
+++ b/client/src/components/core/Modal/Modal.module.scss
@@ -10,7 +10,7 @@
   max-height: 100%;
   overflow: auto;
   text-align: left;
-  transition: bottom 0.25s linear;
+  transition: bottom $transition-time-2 linear;
   background: $color-octant-grey4;
 
   &.isOpen {
