--- a/client/src/components/core/ProgressBar/ProgressBar.module.scss
+++ b/client/src/components/core/ProgressBar/ProgressBar.module.scss
@@ -24,7 +24,6 @@
 
 .filled {
   height: 100%;
-  background: $color-octant-green;
   // shorthand doesn't work here.
   border-radius: inherit;
   border-top-right-radius: 0;
@@ -32,5 +31,14 @@
 
   &.isBorderVisible {
     border-right: 0.2rem solid $color-white;
+  }
+
+  &.variant-- {
+    &green {
+      background: $color-octant-green;
+    }
+    &orange {
+      background: $color-octant-orange;
+    }
   }
 }
