--- a/client/src/components/dedicated/DonorsList/DonorsList.module.scss
+++ b/client/src/components/dedicated/DonorsList/DonorsList.module.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   background: $color-octant-grey4;
-  margin-top: 4rem;
   padding: 4rem 0;
   flex: 1;
   align-self: stretch;
@@ -19,6 +18,8 @@
     font-size: $font-size-16;
     font-weight: $font-weight-bold;
     margin-bottom: 2.4rem;
+    padding-bottom: 1.6rem;
+    border-bottom: 0.1rem solid $color-octant-grey2;
 
     .count {
       display: flex;
@@ -26,7 +27,7 @@
       height: 2.4rem;
       font-size: $font-size-12;
       color: $color-white;
-      background: $color-octant-dark;
+      background: $color-octant-green;
       border-radius: $border-radius-10;
       margin: 0 0 0 1rem;
       padding: 0 1rem;
@@ -63,5 +64,5 @@
 }
 
 .buttonDonors {
-  text-align: left;
+  align-self: center;
 }
