--- a/client/src/components/dedicated/ProposalItem/ProposalItem.module.scss
+++ b/client/src/components/dedicated/ProposalItem/ProposalItem.module.scss
@@ -1,13 +1,20 @@
-$paddingBody: 2.4rem;
+$proposalItemPadding: 2.4rem;
 
 .root {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: stretch;
   border-radius: $border-radius-16;
   background: $color-white;
-  height: 42.9rem;
+  height: 31.4rem;
   width: 100%;
+  bottom: 0;
+  transition: bottom $transition-time-3 linear;
+
+  &:hover {
+    bottom: 0.5rem;
+  }
 
   &.isClickable {
     cursor: pointer;
@@ -16,45 +23,27 @@ $paddingBody: 2.4rem;
   &.isLoadingStates {
     align-items: center;
     justify-content: center;
-    padding: $paddingBody;
+    padding: $proposalItemPadding;
   }
 
   .header {
-    position: relative;
+    display: flex;
+    justify-content: space-between;
+    padding: $proposalItemPadding;
   }
 
-  .imageLandscapeWrapper {
-    display: block;
-    width: 100%;
-    height: auto;
-    max-height: 20rem;
-    position: relative;
-    overflow: hidden;
-    aspect-ratio: 2 / 1;
-
-    .imageLandscape {
-      display: block;
-      width: 100%;
-      height: 100%;
-      max-width: 100%;
-      max-height: inherit;
-      object-fit: cover;
-      border-radius: $border-radius-16 $border-radius-16 0 0;
-    }
+  .button {
+    position: absolute;
+    top: 0.8rem;
+    right: 0.8rem;
   }
 
   .imageProfile {
-    position: absolute;
-    top: 100%;
-    left: 1.7rem;
     border-radius: 50%;
-    border: 0.3rem solid $color-white;
-    transform: translate(0, -50%);
   }
 
   .body {
-    margin: 3rem 0 0 0;
-    padding: $paddingBody;
+    padding: 0 $proposalItemPadding;
     text-align: left;
   }
 
@@ -70,43 +59,7 @@ $paddingBody: 2.4rem;
     overflow: hidden;
   }
 
-  .footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 $paddingBody $paddingBody;
-
-    .numbers {
-      display: flex;
-      font-weight: $font-weight-bold;
-      font-size: $font-size-18;
-    }
-
-    .percentage {
-      position: relative;
-      color: $color-octant-red2;
-      margin: 0 0 0 1rem;
-      padding: 0 0 0 1rem;
-
-      &.isAboveThreshold {
-        color: $color-octant-green5;
-      }
-
-      &:before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 0.2rem;
-        height: 100%;
-        background: $color-octant-grey2;
-      }
-    }
+  .proposalRewards {
+    padding: 0 $proposalItemPadding $proposalItemPadding;
   }
-}
-
-.button {
-  position: relative;
-  z-index: $z-index-2;
-  min-width: 12rem;
 }
