--- a/client/src/layouts/MainLayout/MainLayout.module.scss
+++ b/client/src/layouts/MainLayout/MainLayout.module.scss
@@ -171,6 +171,17 @@ $headerNavigationBorderRadius: $border-radius-32;
   right: 0.5rem;
   color: $color-white;
   font-size: $font-size-07;
+  background: $color-octant-orange;
+  border-radius: 50%;
+  transform: translateZ(0); // On webkit solves the flickering of text during the scale.
+
+  &[data-is-initial-load-done="true"] {
+    &.isAllocationValueChanging {
+      animation-name: scale1;
+      animation-duration: $transition-time-1;
+    }
+  }
+
 }
 
 .coinGecko {
