--- a/client/src/styles/utils/_variables.scss
+++ b/client/src/styles/utils/_variables.scss
@@ -8,6 +8,8 @@ $border-radius-32: 3.2rem;
 $box-shadow-1: 0px 0px 25px rgba(0, 0, 0, 0.05);
 
 $transition-time-1: 0.5s;
+$transition-time-2: 0.25s;
+$transition-time-3: 0.1s;
 
 $z-index-2: 2;
 $z-index-3: 3;
@@ -18,3 +20,4 @@ $z-index-5: 5; // modals
 $headerNavigationHeight: 7.2rem;
 $layoutMarginHorizontal: 2.4rem;
 $layoutBodyMarginBottom: $headerNavigationHeight + 2 * $layoutMarginHorizontal;
+$progressStepperSlimStepPadding: 2.4rem;
