--- a/client/src/views/ProposalView/ProposalView.module.scss
+++ b/client/src/views/ProposalView/ProposalView.module.scss
@@ -6,27 +6,15 @@
   padding-bottom: $layoutBodyMarginBottom;
 }
 
-.bodyLayout {
+.proposal {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 4rem;
+  border-radius: $border-radius-16;
   background: $color-white;
-  padding: 0;
-}
 
-.imageLandscapeWrapper {
-  display: block;
-  width: 100%;
-  height: auto;
-  max-height: 20rem;
-  position: relative;
-  overflow: hidden;
-  aspect-ratio: 2 / 1;
-
-  .imageLandscape {
-    display: block;
-    width: 100%;
-    height: 100%;
-    max-width: 100%;
-    max-height: inherit;
-    object-fit: cover;
+  @media #{$table-down} {
+    border-radius: 0;
   }
 }
 
@@ -37,34 +25,58 @@
 
 .proposalHeader {
   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   width: 100%;
-  padding-top: 3.2rem;
+  padding-top: 4.8rem;
 
-  .imageProfile {
-    width: 4rem;
-    height: 4rem;
-    border-radius: 50%;
-    margin: 0 1.6rem 0 0;
+  .imageProfileWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    align-self: stretch;
   }
 
-  .nameAndAllocationValues {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+  .imageProfile {
+    width: 6.4rem;
+    height: 6.4rem;
+    border-radius: 50%;
+    margin-bottom: 1.6rem;
+
+    @media #{$table-down} {
+      width: 4.8rem;
+      height: 4.8rem;
+    }
+  }
+
+  .proposalRewards {
+    margin: 3.2rem 0 5rem;
+    border-bottom: 0.2rem solid $color-octant-grey4;
+    padding-bottom: 2.4rem;
+  }
+
+  .buttonAddToAllocate {
+    &Mobile {
+      @media #{$desktop-up} {
+        visibility: hidden;
+      }
+    }
+    &Desktop {
+      visibility: hidden;
+      @media #{$desktop-up} {
+        visibility: initial;
+      }
+    }
   }
 
   .name {
+    font-size: $font-size-24;
     font-weight: $font-weight-bold;
+
+    @media #{$table-down} {
+      font-size: $font-size-16;
+    }
   }
-}
-
-.buttonAllocateWrapper {
-  margin: 3rem 0;
-  width: 100%;
-}
-
-.buttonAllocate {
-  width: 100%;
 }
 
 .body {
