--- a/client/src/components/core/Button/Button.module.scss
+++ b/client/src/components/core/Button/Button.module.scss
@@ -122,6 +122,25 @@
     }
   }
 
+  &iconOnly2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: $color-octant-grey4;
+    border-radius: 50%;
+    height: 2.4rem;
+    max-height: 2.4rem;
+    min-height: 2.4rem;
+    width: 2.4rem;
+    max-width: 2.4rem;
+    min-width: 2.4rem;
+    padding: 0;
+
+    svg path {
+      stroke: $color-octant-grey6;
+    }
+  }
+
   &iconOnlyTransparent {
     background: transparent;
     height: 3.2rem;
