--- a/client/src/components/core/DoubleValue/DoubleValue.module.scss
+++ b/client/src/components/core/DoubleValue/DoubleValue.module.scss
@@ -2,6 +2,10 @@
   color: $color-octant-dark;
   font-weight: $font-weight-semibold;
 
+  &.isError {
+    color: $color-octant-orange;
+  }
+
   &.textAlignment--{
     &left {
       text-align: left;
@@ -29,4 +33,8 @@
 .secondary {
   font-size: $font-size-12;
   color: $color-octant-green2;
+
+  &.isError {
+    color: $color-octant-orange;
+  }
 }
