--- a/client/src/components/dedicated/BudgetBox/BudgetBox.module.scss
+++ b/client/src/components/dedicated/BudgetBox/BudgetBox.module.scss
@@ -4,6 +4,22 @@
   margin: 1rem 0 0 0;
 }
 
+.availableFunds {
+  height: 3.2rem;
+  display: flex;
+  align-items: flex-end;
+  border-top: 0.1rem solid $color-white;
+  margin-top: 1.6rem;
+
+  .value {
+    color: $color-black;
+
+    &.isError {
+      color: $color-octant-orange;
+    }
+  }
+}
+
 .button {
   padding: 0;
 }
