--- a/client/src/components/dedicated/ModalGlmLock/ModalGlmLock.module.scss
+++ b/client/src/components/dedicated/ModalGlmLock/ModalGlmLock.module.scss
@@ -1,3 +1,8 @@
+.form {
+  width: 100%;
+  height: 100%;
+}
+
 .element {
   &:not(:last-child) {
     margin: 0 auto 1.6rem;
@@ -13,10 +18,6 @@
 
 .input {
   @include flexBasisGutter(2, 1.6rem);
-}
-
-.availableFunds {
-  margin: 2rem 0 0;
 }
 
 .button {
