--- a/client/src/components/dedicated/ModalWithdrawEth/ModalWithdrawEth.module.scss
+++ b/client/src/components/dedicated/ModalWithdrawEth/ModalWithdrawEth.module.scss
@@ -1,3 +1,8 @@
+.form {
+  width: 100%;
+  height: 100%;
+}
+
 .element {
   &:not(:last-child) {
     margin: 0 auto 1.6rem;
@@ -13,13 +18,6 @@
 
 .input {
   @include flexBasisGutter(2, 1.6rem);
-}
-
-.timeCounterWrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 1.6rem;
 }
 
 .timeCounter {
