OCT-392 Fix onboarding modal bouncing

--- a/client/src/views/OnboardingView/OnboardingView.module.scss
+++ b/client/src/views/OnboardingView/OnboardingView.module.scss
@@ -6,3 +6,11 @@
 .bold {
   @include boldText();
 }
+
+.onboardingModalText {
+  height: 21.6rem;
+}
+
+.onboardingModalImage {
+  height: 24.8rem;
+}
