OCT-391 Split earn view on desktop to 2 columns

--- a/client/src/components/dedicated/History/History.module.scss
+++ b/client/src/components/dedicated/History/History.module.scss
@@ -7,10 +7,14 @@
 }
 
 .header {
-  font-size: 1.6rem;
+  font-size: $font-size-16;
   font-weight: $font-weight-bold;
   margin: 2rem 0;
   text-align: left;
+
+  @media #{$desktop-up} {
+    display: none;
+  }
 }
 
 .box {
