OCT-350 update wallet connect flow

--- a/client/src/components/core/BoxRounded/BoxRounded.module.scss
+++ b/client/src/components/core/BoxRounded/BoxRounded.module.scss
@@ -177,6 +177,10 @@ $padding: 2.4rem;
   &spaceBetween {
     justify-content: space-between;
   }
+
+  &start {
+    justify-content: start;
+  }
 }
 
 .alignment-- {
