OCT-453 Transfer application from Goerli to Sepolia: frontend

--- a/client/src/layouts/MainLayout/MainLayout.module.scss
+++ b/client/src/layouts/MainLayout/MainLayout.module.scss
@@ -50,6 +50,7 @@ $headerNavigationBorderRadius: $border-radius-32;
   align-items: center;
   font-size: $font-size-10;
   font-weight: $font-weight-bold;
+  text-transform: uppercase;
   color: $color-white;
   letter-spacing: 0.1rem;
   background: $color-octant-orange;
