--- a/client/src/components/core/Modal/Modal.module.scss
+++ b/client/src/components/core/Modal/Modal.module.scss
@@ -44,6 +44,7 @@
 
 .overflow {
   @include overlay(0, 0);
+  transition-delay: $transition-time-3;
 
   &.isOpen {
     width: 100%;
@@ -62,7 +63,6 @@
   }
 }
 
-
 @media #{$desktop-up} {
   .root {
     width: 47.2rem;
@@ -70,9 +70,11 @@
     left: 50%;
     box-shadow: $box-shadow-1;
     border-radius: $border-radius-20;
+    animation: hideModal $transition-time-2;
 
     &.isOpen {
       bottom: 50%;
+      animation: showModal $transition-time-2;
     }
   }
 
