--- a/client/src/styles/utils/_keyframes.scss
+++ b/client/src/styles/utils/_keyframes.scss
@@ -1,15 +1,59 @@
 @keyframes scale1 {
-  0% { transform: scale(1); }
-  50% { transform: scale(1.2); }
-  100% { transform: scale(1); }
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 @keyframes fadeIn {
-  0% { bottom: -100%; }
-  100% { bottom: 0; }
+  0% {
+    bottom: -100%;
+  }
+  100% {
+    bottom: 0;
+  }
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes showModal {
+  0% {
+    bottom: -100%;
+    opacity: 0;
+  }
+  75% {
+    bottom: 49%;
+    opacity: 0;
+  }
+  100% {
+    bottom: 50%;
+    opacity: 1;
+  }
+}
+
+@keyframes hideModal {
+  0% {
+    bottom: 50%;
+    opacity: 1;
+  }
+  25% {
+    bottom: 49%;
+    opacity: 0;
+  }
+  100% {
+    bottom: -100%;
+    opacity: 0;
+  }
 }
