--- a/client/src/components/dedicated/ProposalRewards/ProposalRewards.module.scss
+++ b/client/src/components/dedicated/ProposalRewards/ProposalRewards.module.scss
@@ -49,7 +49,7 @@
       .number {
         font-size: $font-size-18;
 
-        @media #{$table-down} {
+        @media #{$tablet-down} {
           font-size: $font-size-16;
         }
 
