--- a/client/src/views/EarnView/EarnView.module.scss
+++ b/client/src/views/EarnView/EarnView.module.scss
@@ -14,8 +14,28 @@
 
 .layoutBody {
   @media #{$desktop-up} {
-    flex-direction: row;
     align-items: start;
     min-height: 0;
+  }
+}
+
+.wrapper {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  align-items: start;
+  min-height: 0;
+
+  @media #{$desktop-up} {
+    flex-direction: row;
+  }
+}
+
+.tip {
+  margin-bottom: 1.6rem;
+
+  @media #{$desktop-up} {
+    margin-bottom: 2.8rem;
   }
 }
