--- a/client/src/views/MetricsView/MetricsView.module.scss
+++ b/client/src/views/MetricsView/MetricsView.module.scss
@@ -15,3 +15,11 @@
 .lockedRatioProgressBar {
   margin: 1.6rem 0 0 0;
 }
+
+.tip {
+  margin-bottom: 3.2rem;
+}
+
+.blackText {
+  color: $color-octant-dark;
+}
