OCT-468 Update client dependency packages

--- a/client/src/components/dedicated/TimeCounter/TimeCounter.module.scss
+++ b/client/src/components/dedicated/TimeCounter/TimeCounter.module.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   width: 100%;
   max-width: 34rem;
+  height: 6rem; // solves flickering problem when Loader disappears and content (higher) loads.
 }
 
 .counters {
