OCT-469 Implement main app load indicator

--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -1,28 +1,28 @@
 $color-black: #000000;
-$color-white: #FFFFFF;
+$color-white: #ffffff;
 
 $color-octant-dark: #171717;
-$color-octant-grey1: #CDCDCD;
-$color-octant-grey2: #EBEBEB;
-$color-octant-grey3: #CDD1CD;
-$color-octant-grey4: #F8F8F8;
-$color-octant-grey5: #B5B5B5;
-$color-octant-grey6: #9EA39E;
-$color-octant-grey7: #FAFAFA;
-$color-octant-grey8: #D9D9D9;
-$color-octant-grey10: #9E9FA3;
-$color-octant-grey11: #E0E0E0;
-$color-octant-grey12: #F3F3F3;
-$color-octant-grey13: #9C9C9C;
-$color-octant-grey14: #D7D7D7;
-$color-octant-grey15: #BABABA;
-$color-octant-green: #2D9B87;
-$color-octant-green2: #5B8A81;
-$color-octant-green3: #1D4558;
-$color-octant-green4: #D1E7E3;
-$color-octant-green5: #ADE2B3;
-$color-octant-red: #D0623F;
-$color-octant-red2: #E23600;
-$color-octant-orange: #FF6157;
-
-
+$color-octant-dark-30: #17171730;
+$color-octant-grey1: #cdcdcd;
+$color-octant-grey2: #ebebeb;
+$color-octant-grey3: #cdd1cd;
+$color-octant-grey4: #f8f8f8;
+$color-octant-grey5: #b5b5b5;
+$color-octant-grey6: #9ea39e;
+$color-octant-grey7: #fafafa;
+$color-octant-grey8: #d9d9d9;
+$color-octant-grey10: #9e9fa3;
+$color-octant-grey11: #e0e0e0;
+$color-octant-grey12: #f3f3f3;
+$color-octant-grey13: #9c9c9c;
+$color-octant-grey14: #d7d7d7;
+$color-octant-grey15: #bababa;
+$color-octant-green: #2d9b87;
+$color-octant-green2: #5b8a81;
+$color-octant-green3: #1d4558;
+$color-octant-green4: #d1e7e3;
+$color-octant-green5: #ade2b3;
+$color-octant-red: #d0623f;
+$color-octant-red2: #e23600;
+$color-octant-orange: #ff6157;
+$color-octant-orange2: #ff9501;
