--- a/client/src/components/core/Modal/Modal.module.scss
+++ b/client/src/components/core/Modal/Modal.module.scss
@@ -21,8 +21,8 @@
     position: relative;
     font-size: $font-size-20;
     font-weight: $font-weight-bold;
-    margin: 0 0 4rem 0;
     width: 100%;
+    overflow: hidden;
   }
 }
 
