--- a/client/src/components/core/InputSelect/InputSelect.scss
+++ b/client/src/components/core/InputSelect/InputSelect.scss
@@ -1,4 +1,10 @@
 .InputSelect {
+  &__value-container {
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+  }
+
   &__control {
     cursor: pointer !important;
     border: 0 !important;
