OCT-493 Optimize assets loading

--- a/client/src/styles/fonts.css
+++ b/client/src/styles/fonts.css
@@ -1,51 +1,51 @@
 @font-face {
   font-family: 'Inter';
-  font-style:  normal;
+  font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("../assets/fonts/inter/Inter-Regular.woff2?v=3.19") format("woff2"),
-  url("../assets/fonts/inter/Inter-Regular.woff?v=3.19") format("woff");
+  src: url('/fonts/inter/Inter-Regular.woff2') format('woff2'),
+    url('/fonts/inter/Inter-Regular.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Inter';
-  font-style:  italic;
+  font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url("../assets/fonts/inter/Inter-Italic.woff2?v=3.19") format("woff2"),
-  url("../assets/fonts/inter/Inter-Italic.woff?v=3.19") format("woff");
+  src: url('/fonts/inter/Inter-Italic.woff2') format('woff2'),
+    url('/fonts/inter/Inter-Italic.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Inter';
-  font-style:  normal;
+  font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("../assets/fonts/inter/Inter-Medium.woff2?v=3.19") format("woff2"),
-  url("../assets/fonts/inter/Inter-Medium.woff?v=3.19") format("woff");
+  src: url('/fonts/inter/Inter-Medium.woff2') format('woff2'),
+    url('/fonts/inter/Inter-Medium.woff') format('woff');
 }
 @font-face {
   font-family: 'Inter';
-  font-style:  italic;
+  font-style: italic;
   font-weight: 500;
   font-display: swap;
-  src: url("../assets/fonts/inter/Inter-MediumItalic.woff2?v=3.19") format("woff2"),
-  url("../assets/fonts/inter/Inter-MediumItalic.woff?v=3.19") format("woff");
+  src: url('/fonts/inter/Inter-MediumItalic.woff2') format('woff2'),
+    url('/fonts/inter/Inter-MediumItalic.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Inter';
-  font-style:  normal;
+  font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url("../assets/fonts/inter/Inter-SemiBold.woff2?v=3.19") format("woff2"),
-  url("../assets/fonts/inter/Inter-SemiBold.woff?v=3.19") format("woff");
+  src: url('/fonts/inter/Inter-SemiBold.woff2') format('woff2'),
+    url('/fonts/inter/Inter-SemiBold.woff') format('woff');
 }
 @font-face {
   font-family: 'Inter';
-  font-style:  italic;
+  font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: url("../assets/fonts/inter/Inter-SemiBoldItalic.woff2?v=3.19") format("woff2"),
-  url("../assets/fonts/inter/Inter-SemiBoldItalic.woff?v=3.19") format("woff");
+  src: url('/fonts/inter/Inter-SemiBoldItalic.woff2') format('woff2'),
+    url('/fonts/inter/Inter-SemiBoldItalic.woff') format('woff');
 }
