--- a/client/src/components/core/InputText/InputText.module.scss
+++ b/client/src/components/core/InputText/InputText.module.scss
@@ -68,6 +68,7 @@
       border: 0.1rem solid $color-octant-grey2;
       border-radius: $border-radius-04;
       background: $color-white;
+      font-size: $font-size-14;
 
       &.isDisabled {
         background: $color-octant-grey12;
