--- a/client/src/components/dedicated/TipTile/TipTile.module.scss
+++ b/client/src/components/dedicated/TipTile/TipTile.module.scss
@@ -4,7 +4,12 @@
   background: $color-white;
   border-radius: $border-radius-16;
   width: 100%;
+  height: 20rem;
   align-items: center;
+
+  @media #{$desktop-up} {
+    height: 19.2rem;
+  }
 }
 
 .infoLabel {
@@ -44,7 +49,7 @@
   flex: 1;
   align-items: center;
   justify-content: center;
-  padding: 1.6rem 2rem;
+  padding: 4rem 2rem 1.6rem 0;
   height: 100%;
 
   @media #{$desktop-up} {
