--- a/client/src/views/OnboardingView/OnboardingView.module.scss
+++ b/client/src/views/OnboardingView/OnboardingView.module.scss
@@ -11,6 +11,21 @@
   height: 21.6rem;
 }
 
-.onboardingModalImage {
-  height: 24.8rem;
+.onboardingModalImageWrapper {
+  height: 24rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 3.2rem 2.4rem 1.2rem;
+  background: $color-octant-grey12;
+
+  @media #{$desktop-up} {
+    height: 31.2rem;
+  }
+
+  .onboardingModalImage {
+    max-width: 100%;
+    max-height: 100%;
+  }
 }
