OCT-546 Epoch 1 specific UI adjustments

--- a/client/src/components/core/Button/Button.module.scss
+++ b/client/src/components/core/Button/Button.module.scss
@@ -178,7 +178,10 @@
     color: $color-octant-green;
     padding: 0;
     font-size: 1.6rem;
-    text-decoration: underline;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   &link4 {
