--- a/client/src/components/core/BoxRounded/Sections/Sections.module.scss
+++ b/client/src/components/core/BoxRounded/Sections/Sections.module.scss
@@ -5,6 +5,15 @@
   height: 7.2rem;
   width: 100%;
   border-bottom: 0.1rem solid $color-octant-grey4;
+
+  &.isDisabled {
+    .label {
+      color: $color-octant-grey3;
+    }
+    .tooltip > * {
+      stroke: $color-octant-grey3;
+    }
+  }
 }
 
 .label {
