--- a/client/src/components/dedicated/DonorsList/DonorsList.module.scss
+++ b/client/src/components/dedicated/DonorsList/DonorsList.module.scss
@@ -1,10 +1,16 @@
 .root {
   display: flex;
   flex-direction: column;
-  background: $color-octant-grey4;
+  background: $color-octant-grey7;
   padding: 4rem 0;
   flex: 1;
   align-self: stretch;
+
+  .donationsNotEnabled {
+    font-size: $font-size-14;
+    font-weight: $font-weight-semibold;
+    color: $color-octant-grey6;
+  }
 
   .loader {
     align-self: center;
@@ -27,7 +33,7 @@
       height: 2.4rem;
       font-size: $font-size-12;
       color: $color-white;
-      background: $color-octant-green;
+      background: $color-octant-grey6;
       border-radius: $border-radius-10;
       margin: 0 0 0 1rem;
       padding: 0 1rem;
