--- a/client/src/views/ProposalView/ProposalView.module.scss
+++ b/client/src/views/ProposalView/ProposalView.module.scss
@@ -1,3 +1,22 @@
+.layout {
+  padding: 1.6rem 0 12rem;
+
+  @media #{$desktop-up} {
+    padding: 1.6rem 2.4rem 12rem;
+  }
+}
+
+.divider {
+  background: $color-octant-grey2;
+  height: 0.1rem;
+  width: 100%;
+  margin: 3.4rem 0 4.6rem;
+
+  @media #{$desktop-up} {
+    margin: 6.4rem 0 5rem;
+  }
+}
+
 .loaderWrapper {
   display: flex;
   align-items: center;
@@ -10,11 +29,12 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 4rem;
-  border-radius: $border-radius-16;
   background: $color-white;
 
-  @media #{$tablet-down} {
-    border-radius: 0;
+  @media #{$desktop-up} {
+    &:first-child {
+      border-radius: $border-radius-16 $border-radius-16 0 0;
+    }
   }
 }
 
@@ -56,20 +76,6 @@
     margin: 3.2rem 0 5rem;
     border-bottom: 0.2rem solid $color-octant-grey4;
     padding-bottom: 2.4rem;
-  }
-
-  .buttonAddToAllocate {
-    &Mobile {
-      @media #{$desktop-up} {
-        visibility: hidden;
-      }
-    }
-    &Desktop {
-      visibility: hidden;
-      @media #{$desktop-up} {
-        visibility: initial;
-      }
-    }
   }
 
   .name {
